# trabaGodGrafos

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: TELCO_data_val.csv  TELCO_labels_test.csv  TELCO_labels_train.csv  TELCO_labels_val.csv
gragod/: utils.py
models/GTA/: train.py
models/GTA/data/: data_loader.py  data_loader_dad.py
models/GTA/exp/: exp_gta_dad.py  exp_informer.py  exp_informer_dad.py  exp_vrae_dad.py
models/GTA/models/: attn.py  gta.py  model.py
models/gnnad/: model.py
models/mtad_gat/: dataset.py  eval_methods.py  metrics.py  model.pt  model.py  modules.py  params.yaml  predict.py  predictor.py  train.py  trainer.py  utils.py
research/: 20240203_1_gch_mtad_gat.py  20240203_gch_initial_research.py  20240210_gch_metrics.py  20240222_gch_gnnad.py
saved_models/mtad_gat/feature_0/: summary.txt  test_output.pkl  train_output.pkl
saved_models/mtad_gat/features/: summary.txt
