[tool.poetry]
name = "trabagodgrafos"
version = "0.1.0"
description = ""
authors = ["gonzachiar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
ipykernel = "^6.29.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
