[tool.poetry]
name = "trabaGodGrafos"
version = "0.1.0"
description = ""
authors = ["Gonzalo Chiarlone <gonzalochiarlone@gmail.com>", "Fererico Bello"]
packages = [
    { include = "gragod" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
ipykernel = "^6.29.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']